tests/machine/x/go/join_multi.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/join_multi.go:10:18: undefined: CustomersItem
../../../tests/machine/x/go/join_multi.go:13:5: undefined: CustomersItem
../../../tests/machine/x/go/join_multi.go:18:15: undefined: OrdersItem
../../../tests/machine/x/go/join_multi.go:21:5: undefined: OrdersItem
../../../tests/machine/x/go/join_multi.go:25:14: undefined: ItemsItem
../../../tests/machine/x/go/join_multi.go:28:5: undefined: ItemsItem
../../../tests/machine/x/go/join_multi.go:33:15: undefined: Result
../../../tests/machine/x/go/join_multi.go:34:16: undefined: Result
../../../tests/machine/x/go/join_multi.go:44:32: undefined: Result

1: //go:build ignore
